<resources>
    <string name="app_name">Bus Inquiry</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_route">Route</string>
    <string name="title_stop">Stop</string>
    <string name="title_more">More</string>

    <string name="tv_start">Start:</string>
    <string name="tv_end">End:</string>
    <string name="btn_search">Search</string>
    <string name="tv_route">Route:</string>
    <string name="et_start_hint">type your starting point here</string>
    <string name="et_end_hint">type your end point here</string>
    <string name="et_route_hint">route name</string>
    <string name="tv_stop">Stop:</string>
    <string name="ev_stop_hint">type stop name here</string>
    <string name="toast_route_succeed">Route query succeeded.</string>
    <string name="toast_route_fail">Route query failed.</string>
    <string name="toast_0_route">No result found. Change the route name and search again.</string>
    <string name="price">Price: ¥</string>
    <string name="start_time">Strart Time: </string>
    <string name="end_time">End Time: </string>
    <string name="toast_transfer_succeed">Transfer query succeed.</string>
    <string name="toast_transfer_fail">No result found, change the stop name and search again.</string>
    <string name="single_stop">stop</string>
    <string name="multi_stop">stops</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="user_not_exist">This user is not exist!</string>
    <string name="toast_register_success">Register succeeded! You can login now.</string>
    <string name="toast_register_fail">Register failed! The user already exists.</string>
    <string name="btn_logout">Log out</string>
    <string name="toast_logout_success">You have logged out.</string>

    <!-- Strings related to more -->
    <string name="btn_modify_stop">Modify stop</string>
    <string name="btn_add_stop">Add stop</string>
    <string name="btn_delete_stop">Delete stop</string>
    <string name="toast_login_hint">Please login as administrator first!</string>
    <string name="title_add_stop">Input the stop name to add:</string>
    <string name="toast_add_stop_succeed">Add Stop Succeed!</string>
    <string name="toast_add_stop_fail">Add Stop Fail! Change the stop name and try again.</string>
    <string name="toast_stop_name_empty">Stop Name can\'t be empty!</string>
    <string name="Add">Add</string>
    <string name="cancel">cancel</string>
    <string name="old_stop_hint">Type the old stop name here</string>
    <string name="new_stop_hint">Type the new stop name here</string>
    <string name="ok">OK</string>
    <string name="toast_modify_stop_succeed">Modify stop succeed!</string>
    <string name="toast_modify_stop_fail">Modify failed. No such stop.</string>
    <string name="title_del_stop">Input the stop name to delete:</string>
    <string name="toast_del_stop_succeed">Delete stop succeed.</string>
    <string name="toast_del_stop_fail">Delete stop failed.</string>
    <string name="btn_add_route">Add route</string>

    <string name="prompt_price">Ticket Price (¥)</string>
    <string name="prompt_starttime">Start time</string>
    <string name="prompt_endtime">End time</string>
    <string name="prompt_stopnum">The number of stops</string>
    <string name="error_num_invalid">This number is invalid!</string>
    <string name="toast_add_route_succeed">Add Route succeeded!</string>
    <string name="toast_add_route_fail">Add Route failed!</string>

    <string name="btn_modify_route">Modify route</string>
    <string name="title_choose_route">Choose the route to modify:</string>
    <string name="toast_modify_route_succeed">Modify route succeeded!</string>
    <string name="toast_modify_route_fail">Modify route failed.</string>
</resources>
