<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="top.ygdays.bus_inquiry.fragment.MoreFragment"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/boundary">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"></Button>

        <Button
                android:text="@string/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_logout"
                ></Button>


    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/btn_add_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_add_stop"
                android:layout_weight="1"
                android:background="@drawable/boundary"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
